@@ -7,6 +7,9 @@ Revision 0.0.8, XX-02-2017
 - Source code statically analyzed and hardened
 - Files closed explicitly to mute ResourceWarnings
 - Fixed to Python 2.4 (and aged ply) compatibility
+- Added a workaround to avoid generating pysnmp TextualConvention classes
+  inheriting from TextualConvention (when MIB defines a TEXTUAL-CONVENTION
+  based on another TEXTUAL-CONVENTION as SYNTAX)
 - Author's e-mail changed, copyright extended to year 2017
 
 Revision 0.0.7, 12-02-2016
